--- a/apps/Web.html
+++ b/apps/Web.html
@@ -29,39 +29,38 @@
 	</div>
 	
 	<p>
-		A Web Browser with an <b>Intelligence System</b> specifically designed for <b>Privacy</b> and <b>Security</b>.
+		An app for browsing the web, built from the ground up to improve performance, security, privacy, and to make sure it fits the platform and and feels at home in your device.
 	</p>
-	
-	<h3>
-		Description
-	</h3>
-	
 	<p>
-		<span class="tag">Web</span> was created to give you an alternative way of <b>browsing</b> and exploring the <b>internet</b>; all other web browsers out there compromise in privacy and security in order to function on most websites, even browser apps that claim to be privacy oriented or to offer incognito browsing, by allowing websites to inject <b>Cookies</b>, have the door open for third-parties to track and finger-print you.
+		Performance/
+		It is hard to put this in words, instead, try it for yourself, download Web Browser and see how fast it can load your favourite websites; did you notice the memory foot print of this app?
+		Forget about using all your iPhone's storage downloading any other browser, this apps is under 10 MB and it plans to stay that way.
 	</p>
-	
 	<p>
-		This app is designed to work the other way around, Web rejects <b>all</b> Cookies by default, <b>preventing</b> any website from tracking you, finger-print your activity, or to share or store your personal information with others.
+		Security/
+		Allowing only secure connections with SSL and HTTPS and making sure websites you visit have valid certificates.
 	</p>
-	
 	<p>
-		Together with a State of the Art Intelligence System for <b>Anti Tracker Protection</b>, Web is the most secure Browser available.
+		Privacy/
+		Anti-tracker protection and blocker, cookies blocker, and other features that make sure no one is watching your online activity, no one is finger printing you, and no one has access to your internet history.
 	</p>
-	
 	<p>
-		Because <b>Trackers</b> are blocked, and <b>Cookies</b> are prevented, Web is also the fastest Browser App available for iPhone, iPad (iOS) and Mac (macOS); have you ever wondered why some websites take forever to load? is all those unwanted third-party trackers consuming and monopolising up your bandwidth and data.
+		Ad-blocker/
+		You won't see ads anymore.
 	</p>
-	
 	<p>
-		Of course, this doesn't come easy, by preventing any tracking and disallowing any of your personal information from being stored in websites, Web is not compatible with some social networks, and it is also no recommended for online-purchases, as websites that require you to create accounts, or to make online payments, rely entirely on Cookies to function properly. For those specific cases we recommend that you revert back to your preferred <i>standard</i> web browser (Safari for example); for all other cases, Web is your best bet.
+		Tailored for platform fit/
+		iOS//
+		Making sure the design follows intuitive patterns, making it easy and reachable for your finger tips, and restricting the amount of touches that you need to accomplish any single task.
 	</p>
-	
 	<p>
-		Among the multiple features, we recommend that you try out <b>Web Intelligence</b>, and <b>Cookie Centre</b>. The former one gives you information and intelligence on your internet activity, including Trackers prevented, Cookies blocked, and Pop-ups stopped, the latter provides you a control centre to decide what Cookies to allow from websites that you trust.
+		Did you notice the search bar is at the bottom?
+		Doesn't it feel more natural to have it accessible, closer to your thumb?
+		Other web browsers, for example Safari, have also implemented the search bar at the bottom, but Web Browser was the first one to launch this revolutionary design, since back in 2020.
 	</p>
-	
 	<p>
-		Make <span class="tag">Web</span> your <span class="tag">Default Browser</span> app.
+		macOS//
+		Being on desktop means more power, more space, bigger screens, and bigger responsibilities. That is why it feels even more powerful than the competition, benchmark Web Browser against any other of your browsers, and you will notice a huge difference.
 	</p>
 	<p>&nbsp;</p>
 	
